agregado de animacion

--- a/Statics/css/style1.css
+++ b/Statics/css/style1.css
@@ -216,3 +216,11 @@ i {
 #social {
     color: black;
 }
+
+span {
+    transition: transform 0.5s ease-in-out;
+}
+
+span:hover {
+    transform: rotate(360deg);
+}
